# Claimio-Pilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_property_match_fields.py
backend/app/: __init__.py  config.py  logging.py  main.py  states.py
backend/app/api/: claimants.py  claims.py  deps.py  properties.py  states.py
backend/app/claims/: __init__.py  extraction.py  letter.py  requirements.py  retrieval.py  workflow.py
backend/app/db/: base.py  models.py
backend/app/match/: __init__.py  blocking.py  cli.py  data_quality.py  normalize.py  pipeline.py  scoring.py
backend/app/schemas/: claim.py  claimant.py  document.py  match.py
backend/app/seed/: load.py  synthetic.py
backend/app/services/: chunking.py  embeddings.py  llm.py  vector_store.py
backend/tests/: _helpers.py  conftest.py  test_blocking.py  test_chunking.py  test_claims_api_db.py  test_claims_workflow_db.py  test_data_quality.py  test_documents_api_db.py  test_embeddings.py  test_extraction.py  test_letter.py  test_llm.py  test_logging.py  test_match_eval.py  test_match_pipeline_db.py  test_models.py  test_normalize.py  test_properties_api_db.py  test_requirements.py  test_requirements_eval.py  test_retrieval_db.py  test_scoring.py  test_states.py  test_synthetic.py  test_vector_store.py
docs/: architecture.md
docs/adr/: 0001-pgvector-as-vector-store.md  0002-openai-compatible-llm-client.md  (+5 more)
frontend/: package-lock.json  package.json
scripts/: demo.sh
(+21 files in other folders)
