[project]
name = "claimpilot-backend"
version = "0.1.0"
description = "ClaimPilot — state-aware unclaimed-property (escheatment) claim automation (demo)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pgvector==0.3.6",
    "openai==1.59.6",
    "httpx==0.28.1",
    "rapidfuzz==3.11.0",
    "faker==33.1.0",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
